tests/correctness/reject/refinement_negative.keel
def main(sys: System); Io:
    x: int where >= 0 = -5
    println(x)
